# ChangeLog for sci-mathematics/sage-clib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 May 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.6.1.ebuild:
  drop old

*sage-clib-4.7_rc0 (26 Apr 2011)

  26 Apr 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.7_alpha5.ebuild, +sage-clib-4.7_rc0.ebuild:
  rc0

*sage-clib-4.7_alpha5 (20 Apr 2011)

  20 Apr 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.7_alpha4.ebuild, +sage-clib-4.7_alpha5.ebuild:
  alpha5

  14 Apr 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-clib-4.6.1.ebuild, sage-clib-4.6.2.ebuild, sage-clib-4.7_alpha4.ebuild:
  enforce pynac with correct python deps in sage-clib

*sage-clib-4.7_alpha4 (13 Apr 2011)

  13 Apr 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.7_alpha3.ebuild, +sage-clib-4.7_alpha4.ebuild:
  alpha4

*sage-clib-4.7_alpha3 (04 Apr 2011)

  04 Apr 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.7_alpha2.ebuild, +sage-clib-4.7_alpha3.ebuild:
  alpha3

  22 Mar 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.7_alpha1.ebuild, +sage-clib-4.7_alpha2.ebuild:
  alpha2

  15 Mar 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-clib-4.7_alpha1.ebuild:
  Get the path right

  15 Mar 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-clib-4.7_alpha1.ebuild:
  Change mpir.h to gmp.h in memory.c (at long last Steve).

*sage-clib-4.7_alpha1 (11 Mar 2011)

  11 Mar 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-clib-4.7_alpha1.ebuild, -sage-clib-4.7_alpha2.ebuild:
  4.7.alpha1

*sage-clib-4.7_alpha2 (02 Mar 2011)
*sage-clib-4.6.2 (02 Mar 2011)

  02 Mar 2011; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-clib-4.6.ebuild, -sage-clib-4.6.2_rc1.ebuild, +sage-clib-4.6.2.ebuild,
  +sage-clib-4.7_alpha2.ebuild:
  4.6.2, 4.7.alpha2 drop old
