@@ -3,6 +3,6 @@ AUX sage-clib-4.6-importenv.patch 1529 RMD160 895c81288fd86386946ebf85fe2d74a423
 DIST sage-4.6.2.tar.bz2 51626196 RMD160 45f8bf3f3aa3543c35e9f2b70dd9f0a20c44c450 SHA1 18cf2aecc3faaa9f106dd6dac582cfc3cf195fd0 SHA256 20bfd7ff21c24c55c08bf26759e3aa8cf803974784e87738c1724f4edded1d62
 DIST sage-4.7_rc0.tar.bz2 53038933 RMD160 3debdb18b73fefd798bb3ac190f205802a8db779 SHA1 fd2ff451e8f323625cec1455ba3d0277e8cc1b94 SHA256 6c53a8e1d987fa457ee7f38a625751b3bb3fc17b3e64d6191d6c5a7c06afd375
 EBUILD sage-clib-4.6.2.ebuild 1295 RMD160 de5baedb64a11d0b62e6b9bc215d6df54f08524f SHA1 82190c0a33bb8329291c478d133414025e2e275e SHA256 c09b1350b1b98a174050cd8c45c873b38b4c76d28293e111064f6c035d6225f1
-EBUILD sage-clib-4.7_rc0.ebuild 1465 RMD160 76d70610c84aa0b79e1d0788177d393ea71c18f1 SHA1 14c899fc408d6ef1800c9d7b17d919929d556437 SHA256 45c6ff202fd013efdd72400707e488d27e0be7973fc6dbaecaa419348c9ca784
-MISC ChangeLog 11935 RMD160 7036d9c03e5ab1665bb4abb331f932f20c6c8872 SHA1 f209b570b08b65809a7d4393924f6a6a047f1ba1 SHA256 d417da1bd23a995c86f6152d5939a2b275590adc04b653831face0acb8c88dce
+EBUILD sage-clib-4.7_rc0-r1.ebuild 1948 RMD160 2f7c2f5c086cc65e36682c5ab381be5188e8c149 SHA1 a8f7394339086f189d797a08e5ec6c7bd0b07776 SHA256 4c9b0b6aabe6b6c8717ee0d72773015e7b123e3ac755c92fc2327b242440b9b4
+MISC ChangeLog 12143 RMD160 40d042bcd4f063b1d50edd6280349de91da4ac6e SHA1 0b25f4239548e3dfa69d569412476e588db49983 SHA256 3a2d6ca2f45b5175e88b3faa8e35c2a839404705b3c7aa7252eb76d34873d260
 MISC metadata.xml 218 RMD160 5dcdfc9ffbff78c3625f6ee6cd8242c0130bba48 SHA1 e7d6721263f31430e0dd04b17f16c27ebac78a89 SHA256 45420c665fb7a061ce85d5300ea7ed5a034a812dc286e2c87540b90d1388d79d
