@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sage-clib-4.7_rc0-r1 (09 May 2011)
+
+  09 May 2011; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  -sage-clib-4.7_rc0.ebuild, +sage-clib-4.7_rc0-r1.ebuild:
+  Allow installation for multiple python ABIs.
+
   04 May 2011; François Bissey <francois.bissey@canterbury.ac.nz>
   -sage-clib-4.6.1.ebuild:
   drop old
